fix: decrease max-width of feature text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -841,6 +841,7 @@ form label {
   }
   .feature-left .feature-copy {
     width: calc(100% - 50px);
+    max-width: 280px;
     float: none;
     margin-top: 0;
     padding: 0;
